dfir_rs/tests/compile-fail-stable/surface_merge_badtypes.stderr
error[E0271]: type mismatch resolving `<impl Stream<Item = char> as Stream>::Item == {integer}`
 --> tests/compile-fail-stable/surface_merge_badtypes.rs:7:9
  |
5 |         m = union() -> for_each(std::mem::drop);
  |             ----- required by a bound introduced by this call
6 |         source_iter(0..10) -> m;
7 |         source_iter("hello".chars()) -> m;
  |         ^^^^^^^^^^^ expected integer, found `char`
  |
note: required by a bound in `check_inputs`
 --> tests/compile-fail-stable/surface_merge_badtypes.rs:5:13
  |
5 |         m = union() -> for_each(std::mem::drop);
  |             ^^^^^ required by this bound in `check_inputs`

error[E0271]: type mismatch resolving `<impl Stream<Item = char> as Stream>::Item == {integer}`
 --> tests/compile-fail-stable/surface_merge_badtypes.rs:5:13
  |
5 |         m = union() -> for_each(std::mem::drop);
  |             ^^^^^ expected integer, found `char`
  |
note: required by a bound in `check_inputs`
 --> tests/compile-fail-stable/surface_merge_badtypes.rs:5:13
  |
5 |         m = union() -> for_each(std::mem::drop);
  |             ^^^^^ required by this bound in `check_inputs`

error[E0271]: type mismatch resolving `<impl Stream<Item = char> as Stream>::Item == {integer}`
 --> tests/compile-fail-stable/surface_merge_badtypes.rs:5:24
  |
5 |         m = union() -> for_each(std::mem::drop);
  |                        ^^^^^^^^ expected integer, found `char`
  |
note: required by a bound in `check_inputs`
 --> tests/compile-fail-stable/surface_merge_badtypes.rs:5:13
  |
5 |         m = union() -> for_each(std::mem::drop);
  |             ^^^^^ required by this bound in `check_inputs`
